src/objects/FieldExperience__c.object
<CustomObject>
    <fields>
        <fullName>DTState__c</fullName>
        <description>State/s a student will be physically doing (DT) Demonstration Teaching.</description>
        <inlineHelpText>State/s a student will be physically doing (DT) Demonstration Teaching.
*KY - No DT for students enrolled 12/1/2012 or later</inlineHelpText>
        <label>DT State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AA - Armed Forces America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AE - Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AP - Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DTTimelineRevision__c</fullName>
        <description>Date email sent requesting DT timeline revision or the DT timeline upload</description>
        <label>DT Timeline Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datescheduledtotakeexam__c</fullName>
        <description>The date the student plans to take state required content exam.  (PCE phase)</description>
        <inlineHelpText>Content Exam</inlineHelpText>
        <label>Date scheduled to take exam</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemoFeeBilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DT Fee has been billed</description>
        <label>Demo Fee Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory Resolution</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Warning</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Warning</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3 Warning: Removal from Licensure</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistrictNameChildrenAreIn__c</fullName>
        <description>Name of the district the student&apos;s children attend.</description>
        <label>District Name Children Are In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictNameRelativeWorksIn__c</fullName>
        <description>Name of the district the student&apos;s relative works.</description>
        <label>District Name Relative Works In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictNameStudentWorksIn__c</fullName>
        <label>District Name Student Works In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictOK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Review Checklist, district has been chosen</description>
        <label>District(s) OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistrictSchoolContactedDate__c</fullName>
        <description>Last date a school or district was contacted for this student&apos;s placement request.</description>
        <inlineHelpText>Last date school or district was contacted for this placement.</inlineHelpText>
        <label>District/School Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistrictSchoolRevision__c</fullName>
        <description>Date email sent asking for school or district to be revised.</description>
        <label>District/School Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotPass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedHealthStartDate__c</fullName>
        <description>Estimated date the student intends to do Health Placement. This can be months in the future.</description>
        <label>Estimated Health Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EverythingComplete__c</fullName>
        <label>Everything Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExceptionReason__c</fullName>
        <label>Exception Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FEAutoEmails__c</fullName>
        <description>This field is used for workflows and sending email.</description>
        <inlineHelpText>Please select the email reminder you would like to send.</inlineHelpText>
        <label>FE Auto Emails</label>
        <picklist>
            <picklistValues>
                <fullName>BCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFAW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FERPANeeded__c</fullName>
        <description>Date email sent asking for FERPA to be revised, uploaded etc.</description>
        <label>FERPA Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FERPAUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden checkbox used to manage the student-facing tasks.</description>
        <label>FERPAUploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Family Educational Rights and Privacy Act of 1974.
Check if the Ferpa has been validated and on file.</description>
        <inlineHelpText>Family Educational Rights and Privacy Act</inlineHelpText>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldExperienceStatus__c</fullName>
        <description>The status of the Field Experience application.</description>
        <label>Field Experience Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Phase Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Phase Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Phase Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Phase Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancialAidStatus__c</fullName>
        <formula>Student__r.FinancialAidStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haberman__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haberman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immunizations__c</fullName>
        <description>Immunizations and tests required for Health Placements.</description>
        <inlineHelpText>Check list for required Health Placement immunizations and tests.</inlineHelpText>
        <label>Immunizations and Tests</label>
        <picklist>
            <picklistValues>
                <fullName>Hep B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influenza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varicella</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>InternType__c</fullName>
        <label>Intern Type</label>
        <picklist>
            <picklistValues>
                <fullName>CA Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an Intern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatestObjectiveExamsRemaining__c</fullName>
        <description>Latest objective exams remaining based on last audit completion.</description>
        <inlineHelpText>Latest objective exams remaining based on last audit completion.</inlineHelpText>
        <label>Latest Objective Exams Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestTasksRemaining__c</fullName>
        <description>Latest tasks remaining based on last audit completion.</description>
        <inlineHelpText>Latest tasks remaining based on last audit completion.</inlineHelpText>
        <label>Latest Tasks Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LengthofDemonstrationTeaching__c</fullName>
        <description>Length of demonstration teaching in weeks.</description>
        <label>Length of Demonstration Teaching</label>
        <picklist>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semester Long Placement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LiabilityExpirationDate__c</fullName>
        <label>Liability Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LiabilityInsuranceUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden checkbox used to manage the student-facing tasks.</description>
        <label>Liability Insurance Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiabilityInsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liability Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiabilityNeedsRenewalEmail__c</fullName>
        <description>Sends email to renew liability insurance when changed.</description>
        <inlineHelpText>Sends email to renew liability insurance when changed.</inlineHelpText>
        <label>Liability Needs Renewal Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LiabilityReminder__c</fullName>
        <description>Date email sent asking for Liability/NEA to be revised, updated, uploaded</description>
        <label>Liability Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicensureOK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensure OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicensureRevsion__c</fullName>
        <description>Date email sent asking for licensure to be revised.</description>
        <label>Licensure Revsion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MenRecAcceptsGuidance__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Accepts Guidance</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecAcceptsResponsibility__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Accepts Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecAttemptstoSolveProblems__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Attempts to Solve Problems</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecClarifiesConcepts__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Clarifies Concepts</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecCommProfessionalToneTechnology__c</fullName>
        <description>Communicates a professional tone in use of technology</description>
        <label>MenRec Comm Professional Tone Technology</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecConductedInterviewCall__c</fullName>
        <description>Did the mentor complete their DT Interview call?  Yes or No</description>
        <label>MenRec Conducted Interview Call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecConveysThoughts__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Conveys Thoughts</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecDateConductedCall__c</fullName>
        <description>Date mentor conducted their DT Interview call.</description>
        <label>MenRec Date Conducted Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MenRecDoesNotCutOthersOff__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Does Not Cut Others Off</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecDoesNotUseFillerWords__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Does Not Use Filler Words</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecEmploysLatestToolsTechnology__c</fullName>
        <label>MenRec Employs Latest Tools Technology</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecEnunciatesWordsClearly__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Enunciates Words Clearly</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecEvaluatesPersonalPerformance__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Evaluates Personal Performance</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsAdaptability__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsProfessionalDemeanor__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Professional Demeanor</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsResponsibility__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsSelfConfidence__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Self-Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsSelfControl__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Self-Control</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExhibitsSelfEsteem__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Exhibits Self-Esteem</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExpressesFeelings__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Expresses Feelings</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecExpressesPositiveAttitude__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Expresses Positive Attitude</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecFacesProblemsRealistically__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Faces Problems Realistically</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecInteractsProfessionally__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Interacts Professionally</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecListensCarefully__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Listens Carefully</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecMaintainsAttitude__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Maintains Attitude</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecMakesSoundDecisions__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Makes Sound Decisions</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecMentorRecommend__c</fullName>
        <description>Does the mentor recommend the student for DT.  Yes or No</description>
        <label>MenRec Mentor Recommend</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecModifiesActionsAfterCriticism__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Modifies Actions After Criticism</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>